--- a/app/views/devices/validate.html.erb
+++ b/app/views/devices/validate.html.erb
@@ -1,3 +1,3 @@
 <h1>Thanks!</h1>
 
-<p>You have succesfully validated this new device. Now you can go back to it and start using Script!</p>
+<p>You have succesfully validated this new device. Now you can go back to it and start using Scripty!</p>
